# surfari

./: .gitignore  MANIFEST.in  README.md  batch.csv  navigation_cli.spec  pyproject.toml
container_launcher/: Dockerfile  build-surfari-container.sh  index.html  install_docker_image.sh  startup.sh  xstartup
file_sandbox/upload/: testDocForUpload.docx
installers/: build_and_package.sh
src/surfari/: __init__.py  navigation_cli.py
src/surfari/agents/: __init__.py
src/surfari/agents/base_agent/: __init__.py  _base_agent.py
src/surfari/agents/navigation_agent/: _navigation_agent.py  _pinecone_resolver.py  _prompts.py  _record_and_replay.py  _record_and_replay_prompt.py
src/surfari/agents/tools/: gmail_tools.py  google_tools.py
src/surfari/file_sandbox/: test_mcp_config.json
src/surfari/model/: llm_common.py  structured_llm.py  tool_executor.py  tool_helper.py
src/surfari/model/mcp/: fs_http_embed.py  fs_server.py  manager.py  (+5 more)
src/surfari/security/: .env  credentials.db  data_masker.py  gmail_otp_fetcher.py
src/surfari/util/: async_bridge.py  cdp_browser.py  config.json  config.py  electron_connector.py  playwright_util.py  surfari_logger.py
src/surfari/view/: full_text_extractor.py  html_to_text.js  text_layouter.py
surfari/agents/navigation_agent/: __init__.py  _navigation_agent.py  _prompts.py  _record_and_replay.py  _typing.py  _value_resolver.py
surfari/model/: tool_executor.py
surfari/model/mcp/: tool_registry.py  types.py
surfari/security/: gmail_otp_fetcher.py  site_credential_manager.py
surfari/util/: cdp_browser.py  config.py  db_service.py  playwright_util.py  surfari_logger.py
surfari/view/: text_to_image.py
(+1 files in other folders)
