[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surfari"
version = "0.1.6"
description = "Surfari: Modular browser automation with LLM"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Yonghui Zhang", email = "yonghui.zhang.ca@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "playwright>=1.51.0",
  "google.genai>=1.14.0",
  "openai>=1.77.0",
  "anthropic>=0.59.0",
  "pydantic>=2.11.4",
  "python-dotenv>=1.1.0",
  "jsonfinder>=0.4.2",
  "nest_asyncio>=1.6.0",
  "ollama>=0.4.8",
  "aiofiles>=24.1.0",
  "google_auth_oauthlib>=1.2.1",
  "httpx>=0.28.1",
  "setuptools>=80.9.0",
  "keyring>=24.3.0",
  "cryptography>=42.0.0",
  "pyinstaller>=6.14.2",
  "tldextract>=5.3.0",
  "pinecone>=7.3.0",
  "mcp>=1.13.1",
  "fastmcp>=2.11.3"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"], include = ["surfari*"], exclude = ["surfari.test*"] } }

[tool.setuptools."package-data"]
surfari = [
    "util/config.json",
    "view/html_to_text.js",
    "security/.env",
    "security/credentials.db",
    "security/google_client_secret.json"
]

[tool.pytest.ini_options]
# Ensure pytest can find your src/ package
pythonpath = ["src"]
# Show nicer test output
addopts = "-ra -q"
# Coverage options
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/surfari"]

[tool.coverage.report]
show_missing = true
skip_covered = true
